--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+beautifulsoup4==4.11.1
+bs4==0.0.1
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
@@ -10,5 +12,6 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 requests==2.28.1
 six==1.16.0
+soupsieve==2.3.2.post1
 urllib3==1.26.10
 Werkzeug==2.1.2
